--- a/client/views/admin/book_details.html
+++ b/client/views/admin/book_details.html
@@ -1,4 +1,4 @@
-<a href="#/books">Go Back</a>
+<a href="books">Go Back</a>
 <div class="panel panel-default" ng-init="getBook()">
   <div class="panel-heading">
     <h3 class="panel-title">Movie Name : {{ book.movie }}</h3>
@@ -18,6 +18,6 @@
 </div>
 
 <div class="pull-right">
-  <a href="#/books/edit/{{ book._id }}">Edit</a> |
+  <a href="books/edit/{{ book._id }}">Edit</a> |
   <a href="#" ng-click="removeBook(book._id)">Delete</a>
 </div>
