--- a/client/views/admin/books.html
+++ b/client/views/admin/books.html
@@ -9,7 +9,9 @@
           <div class="col-md-6">
             <h4>Movie Name : {{ book.movie }}</h4>
             <p>Review : {{ book.review }}</p>
-            <a class="btn btn-primary" href="#/books/details/{{ book._id }}"
+            <a
+              class="btn btn-primary"
+              href="#/admin/books/details/{{ book._id }}"
               >View Details</a
             >
           </div>
