--- a/client/views/admin/edit_book.html
+++ b/client/views/admin/edit_book.html
@@ -1,4 +1,4 @@
-<a href="#/books">Go Back</a>
+<a href="books">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Edit Book</h3>
