--- a/client/views/student/add_book.html
+++ b/client/views/student/add_book.html
@@ -18,14 +18,14 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/student/books/add">Add Book</a></li>
+        <li><a href="student/books/add">Add Book</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/student/books">Go Back</a>
+<a href="student/books">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add Book</h3>
