--- a/client/views/admin/add_book.html
+++ b/client/views/admin/add_book.html
@@ -1,4 +1,4 @@
-<a href="#/admin/books">Go Back</a>
+<a href="admin/books">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add Book</h3>
