--- a/client/views/admin/add_book.html
+++ b/client/views/admin/add_book.html
@@ -1,4 +1,31 @@
-<a href="admin/books">Go Back</a>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button
+        type="button"
+        class="navbar-toggle collapsed"
+        data-toggle="collapse"
+        data-target="#navbar"
+        aria-expanded="false"
+        aria-controls="navbar"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Bookstore</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="admin/books/add">Add Book</a></li>
+      </ul>
+    </div>
+    <!--/.nav-collapse -->
+  </div>
+</nav>
+
+<a href="#/admin/books">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add Book</h3>
@@ -6,7 +33,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
-        <form ng-submit="addBook()">
+        <form ng-submit="addBookA()">
           <div class="form-group">
             <label>Admission Number</label>
             <input
