--- a/client/views/admin/books.html
+++ b/client/views/admin/books.html
@@ -1,3 +1,31 @@
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button
+        type="button"
+        class="navbar-toggle collapsed"
+        data-toggle="collapse"
+        data-target="#navbar"
+        aria-expanded="false"
+        aria-controls="navbar"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Bookstore</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#/admin/books/add">Add Book</a></li>
+      </ul>
+    </div>
+    <!--/.nav-collapse -->
+  </div>
+</nav>
+
+<a href="#/">Go Back</a>
 <div class="panel panel-default" ng-init="getBooks()">
   <div class="panel-heading">
     <h3 class="panel-title">Recent reviews</h3>
@@ -9,6 +37,7 @@
           <div class="col-md-6">
             <h4>Movie Name : {{ book.movie }}</h4>
             <p>Review : {{ book.review }}</p>
+            <p>Approved Status: {{ book.approved }}</p>
             <a
               class="btn btn-primary"
               href="#/admin/books/details/{{ book._id }}"
