--- a/client/views/student/add_book.html
+++ b/client/views/student/add_book.html
@@ -25,7 +25,7 @@
   </div>
 </nav>
 
-<a href="student/books">Go Back</a>
+<a href="#/student/books">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Add Book</h3>
