--- a/client/views/login.html
+++ b/client/views/login.html
@@ -14,7 +14,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
   </div>
 </nav>
@@ -26,10 +26,10 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
-        <a href="#/student/books"
+        <a href="#/student/movies"
           ><button class="btn btn-default">Enter as Student</button></a
         >
-        <a href="#/admin/books"
+        <a href="#/admin/movies"
           ><button class="btn btn-default">Enter as Admin</button></a
         >
       </div>
