--- a/client/views/student/book_details.html
+++ b/client/views/student/book_details.html
@@ -14,19 +14,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="student/books/add">Add Book</a></li>
+        <li><a href="student/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/student/books">Go Back</a>
-<div class="panel panel-default" ng-init="getBook()">
+<a href="#/student/movies">Go Back</a>
+<div class="panel panel-default" ng-init="getReview()">
   <div class="panel-heading">
     <h3 class="panel-title">Movie Name : {{ book.movie }}</h3>
   </div>
