--- a/client/views/admin/book_details.html
+++ b/client/views/admin/book_details.html
@@ -14,19 +14,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="admin/books/add">Add Book</a></li>
+        <li><a href="admin/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/admin/books">Go Back</a>
-<div class="panel panel-default" ng-init="getBook()">
+<a href="#/admin/movies">Go Back</a>
+<div class="panel panel-default" ng-init="getReview()">
   <div class="panel-heading">
     <h3 class="panel-title">Movie Name : {{ book.movie }}</h3>
   </div>
@@ -46,6 +46,6 @@
 </div>
 
 <div class="pull-right">
-  <a href="#/admin/books/edit/{{ book._id }}">Edit</a> |
-  <a href="#" ng-click="removeBook(book._id)">Delete</a>
+  <a href="#/admin/movies/edit/{{ book._id }}">Edit</a> |
+  <a href="#" ng-click="removeReview(book._id)">Delete</a>
 </div>
