--- a/client/views/admin/edit_book.html
+++ b/client/views/admin/edit_book.html
@@ -14,18 +14,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="admin/books/add">Add Book</a></li>
+        <li><a href="admin/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/admin/books">Go Back</a>
+<a href="#/admin/movies">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Edit Book</h3>
@@ -33,7 +33,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
-        <form ng-submit="updateBook()" ng-init="getBook()">
+        <form ng-submit="updateReview()" ng-init="getReview()">
           <div class="form-group">
             <label>Admission Number</label>
             <input
