--- a/client/views/student/add_book.html
+++ b/client/views/student/add_book.html
@@ -14,26 +14,26 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="student/books/add">Add Book</a></li>
+        <li><a href="student/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/student/books">Go Back</a>
+<a href="#/student/movies">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Add Book</h3>
+    <h3 class="panel-title">Add Rating/Review</h3>
   </div>
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
-        <form ng-submit="addBook()">
+        <form ng-submit="addReview()">
           <div class="form-group">
             <label>Admission Number</label>
             <input
