--- a/client/views/student/books.html
+++ b/client/views/student/books.html
@@ -14,18 +14,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bookstore</a>
+      <a class="navbar-brand" href="#">Movie-Review</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#/student/books/add">Add Book</a></li>
+        <li><a href="#/student/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 <a href="#/">Go Back</a>
-<div class="panel panel-default" ng-init="getBooks()">
+<div class="panel panel-default" ng-init="getReviews()">
   <div class="panel-heading">
     <h3 class="panel-title">Recent reviews</h3>
   </div>
@@ -39,7 +39,7 @@
             <p>Approved Status: {{ book.approved }}</p>
             <a
               class="btn btn-primary"
-              href="#/student/books/details/{{ book._id }}"
+              href="#/student/movies/details/{{ book._id }}"
               >View Details</a
             >
           </div>
