--- a/client/views/student/add_review.html
+++ b/client/views/student/add_review.html
@@ -18,28 +18,28 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="admin/movies/add">Add Rating/Review</a></li>
+        <li><a href="student/movies/add">Add Rating/Review</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
 
-<a href="#/admin/movies">Go Back</a>
+<a href="#/student/movies">Go Back</a>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Edit Book</h3>
+    <h3 class="panel-title">Add Rating/Review</h3>
   </div>
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
-        <form ng-submit="updateReview()" ng-init="getReview()">
+        <form ng-submit="addReview()">
           <div class="form-group">
             <label>Admission Number</label>
             <input
               type="text"
               class="form-control"
-              ng-model="book.admn"
+              ng-model="review.admn"
               placeholder="Admission number"
             />
           </div>
@@ -48,7 +48,7 @@
             <input
               type="text"
               class="form-control"
-              ng-model="book.email"
+              ng-model="review.email"
               placeholder="Email"
             />
           </div>
@@ -57,13 +57,13 @@
             <input
               type="text"
               class="form-control"
-              ng-model="book.movie"
+              ng-model="review.movie"
               placeholder="Moviename"
             />
           </div>
           <div class="form-group">
             <label>Rating</label>
-            <select ng-model="book.rating" class="form-control" placeholder="1">
+            <select ng-model="review.rating" class="form-control">
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -75,21 +75,9 @@
             <label>Review</label>
             <textarea
               class="form-control"
-              ng-model="book.review"
+              ng-model="review.description"
               placeholder="Description"
             ></textarea>
-          </div>
-          <div class="form-group">
-            <label>Approval Status</label>
-            <select
-              ng-model="book.approved"
-              class="form-control"
-              placeholder="Pending"
-            >
-              <option value="Pending">Pending</option>
-              <option value="Approved">Approved</option>
-              <option value="Rejected">Rejected</option>
-            </select>
           </div>
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
